--- a/contact-me.html
+++ b/contact-me.html
@@ -228,24 +228,18 @@
         <section class="section-gap-equal contact-me-area">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-xl-9">
+                    <div class="col-xl-12">
                         <div class="contact-me">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <div class="thumb">
-                                        <img src="assets/images/others/contact-me.jpg" alt="Contact Me">
-                                    </div>
                                     <ul class="shape-group">
-                                        <li class="shape-1 scene">
-                                            <img data-depth="1.4" src="assets/images/about/shape-13.png" alt="Shape">
-                                        </li>
                                         <li class="shape-2 scene">
                                             <img data-depth="-1.4" src="assets/images/counterup/shape-02.png" alt="Shape">
                                         </li>
-                                        <li class="shape-3">
-                                            <img src="assets/images/about/shape-07.png" alt="Shape">
-                                        </li>
                                     </ul>
+                                    <div class="thumb">
+                                        <img src="assets/images/others/contact-me.png" alt="Contact Me">
+                                    </div>
                                 </div>
                                 <div class="contact-us-info">
                                     <h3 class="heading-title">لا تترددوا في طرح أي سؤال.</h3>
@@ -287,7 +281,7 @@
                     <div class="col-lg-8">
                         <div class="contact-form">
                             <div class="section-title section-center">
-                                <h3 class="title">ل تحتاج إلى الدعم الفني أو لديك طلب خاص؟</h3>
+                                <h3 class="title">هل تحتاج إلى الدعم الفني أو لديك طلب خاص؟</h3>
                                 <a>سواء كنت تحتاج إلى دعم فني أو ترغب في طلب خدمة معينة، فنحن هنا لمساعدتك. ما عليك سوى ملء النموذج أدناه وسنقوم بالرد عليك في أقرب وقت ممكن.</a>
                             </div>
                             <form id="contact-form">
