--- a/course.html
+++ b/course.html
@@ -232,7 +232,7 @@
                         <div class="edu-course course-style-1 course-box-shadow hover-button-bg-white">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="course-details.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-01.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
@@ -268,7 +268,7 @@
                                     <button class="wishlist-btn"><i class="icon-22"></i></button>
                                     <span class="course-level">الدرس الأول</span>
                                     <h6 class="title">
-                                        <a href="course-details.html">تحليل نتائج الفصل الأول</a>
+                                        <a href="#">تحليل نتائج الفصل الأول</a>
                                     </h6>
                                     <div class="course-rating">
                                         <div class="rating">
@@ -283,7 +283,7 @@
                                     <div class="course-price">منصة الوجيز</div>
                                     <p>طريقة تحليل نتائج الفصل الأول وإستخراج نتائج وتوجيه التلاميذ.</p>
                                     <br>
-                                    <a href="course-details.html" class="edu-btn btn-secondary btn-small">الدرس</a>
+                                    <a href="#" class="edu-btn btn-secondary btn-small">الدرس</a>
                                 </div>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                         <div class="edu-course course-style-1 course-box-shadow hover-button-bg-white">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="course-details.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-02.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
@@ -331,7 +331,7 @@
                                     <button class="wishlist-btn"><i class="icon-22"></i></button>
                                     <span class="course-level">الدرس الثاني</span>
                                     <h6 class="title">
-                                        <a href="course-details.html">تحليل نتائج الفصل الثاني</a>
+                                        <a href="#">تحليل نتائج الفصل الثاني</a>
                                     </h6>
                                     <div class="course-rating">
                                         <div class="rating">
@@ -346,7 +346,7 @@
                                     <div class="course-price">منصة الوجيز</div>
                                     <p>طريقة تحليل نتائج الفصل لثاني وإستخراج نتائج وتوجيه التلاميذ.</p>
                                     <br>
-                                    <a href="course-details.html" class="edu-btn btn-secondary btn-small">الدرس</a>
+                                    <a href="#" class="edu-btn btn-secondary btn-small">الدرس</a>
                                 </div>
                             </div>
                         </div>
@@ -358,7 +358,7 @@
                         <div class="edu-course course-style-1 course-box-shadow hover-button-bg-white">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="course-details.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-03.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
@@ -394,7 +394,7 @@
                                     <button class="wishlist-btn"><i class="icon-22"></i></button>
                                     <span class="course-level">الدرس الثالث</span>
                                     <h6 class="title">
-                                        <a href="course-details.html">تحليل نتائج الفصل الثالث</a>
+                                        <a href="#">تحليل نتائج الفصل الثالث</a>
                                     </h6>
                                     <div class="course-rating">
                                         <div class="rating">
@@ -409,7 +409,7 @@
                                     <div class="course-price">منصة الوجيز</div>
                                     <p>طريقة تحليل نتائج الفصل الثالث وإستخراج نتائج وتوجيه التلاميذ.</p>
                                     <br>
-                                    <a href="course-details.html" class="edu-btn btn-secondary btn-small">الدرس</a>
+                                    <a href="#" class="edu-btn btn-secondary btn-small">الدرس</a>
                                 </div>
                             </div>
                         </div>
@@ -421,7 +421,7 @@
                         <div class="edu-course course-style-1 course-box-shadow hover-button-bg-white">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="course-details.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-04.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
@@ -457,7 +457,7 @@
                                     <button class="wishlist-btn"><i class="icon-22"></i></button>
                                     <span class="course-level">الدرس الرابع</span>
                                     <h6 class="title">
-                                        <a href="course-details.html">تحليل النتائج السنوية</a>
+                                        <a href="#">تحليل النتائج السنوية</a>
                                     </h6>
                                     <div class="course-rating">
                                         <div class="rating">
@@ -472,7 +472,7 @@
                                     <div class="course-price">منصة الوجيز</div>
                                     <p>طريقة تحليل النتائج السنوية وإستخراج نتائج وتوجيه التلاميذ.</p>
                                     <br>
-                                    <a href="course-details.html" class="edu-btn btn-secondary btn-small">الدرس</a>
+                                    <a href="#" class="edu-btn btn-secondary btn-small">الدرس</a>
                                 </div>
                             </div>
                         </div>
@@ -484,7 +484,7 @@
                         <div class="edu-course course-style-1 course-box-shadow hover-button-bg-white">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="course-details.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-05.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
@@ -520,7 +520,7 @@
                                     <button class="wishlist-btn"><i class="icon-22"></i></button>
                                     <span class="course-level">الدرس الخامس</span>
                                     <h6 class="title">
-                                        <a href="course-details.html">تحليل نتائج شهادة التعليم</a>
+                                        <a href="#">تحليل نتائج شهادة التعليم</a>
                                     </h6>
                                     <div class="course-rating">
                                         <div class="rating">
@@ -535,7 +535,7 @@
                                     <div class="course-price">منصة الوجيز</div>
                                     <p>طريقة تحليل نتائج شهادة التعليم المتوسطة.</p>
                                     <br>
-                                    <a href="course-details.html" class="edu-btn btn-secondary btn-small">الدرس</a>
+                                    <a href="#" class="edu-btn btn-secondary btn-small">الدرس</a>
                                 </div>
                             </div>
                         </div>
@@ -547,7 +547,7 @@
                         <div class="edu-course course-style-1 course-box-shadow hover-button-bg-white">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="course-details.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-06.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
@@ -583,7 +583,7 @@
                                     <button class="wishlist-btn"><i class="icon-22"></i></button>
                                     <span class="course-level">الدرس السادس</span>
                                     <h6 class="title">
-                                        <a href="course-details.html">إمتحان تقييم المكتسبات</a>
+                                        <a href="#">إمتحان تقييم المكتسبات</a>
                                     </h6>
                                     <div class="course-rating">
                                         <div class="rating">
@@ -598,7 +598,7 @@
                                     <div class="course-price">منصة الوجيز</div>
                                     <p>طريقة تحليل ومعالجة إمتحان تقييم المكتسبات لسنة الخامسة.</p>
                                     <br>
-                                    <a href="course-details.html" class="edu-btn btn-secondary btn-small">الدرس</a>
+                                    <a href="#" class="edu-btn btn-secondary btn-small">الدرس</a>
                                 </div>
                             </div>
                         </div>
