--- a/faq.html
+++ b/faq.html
@@ -312,7 +312,7 @@
                                             </h5>
                                             <div id="question-5" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
                                                 <div class="accordion-body">
-                                                    <p>الموقع يقدم نتائج مفصلة مقسمة على عدة جداول، ويعالج جميع الجوانب الضرورية التي من خلالها يمكنك الاستغناء عن اي معلومات إضافية اخرى..</p>
+                                                    <p>الموقع يقدم نتائج مفصلة مقسمة على عدة جداول، ويعالج جميع الجوانب الضرورية التي من خلالها يمكنك الاستغناء عن اي معلومات إضافية اخرى.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -324,7 +324,7 @@
                                             </h5>
                                             <div id="question-6" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
                                                 <div class="accordion-body">
-                                                    <p>ننعم، نحن نقدم خدمات مخصصة وفردية حسب نوع الطلب، والغرض منه، حيث أن خدمات الموقع لا تتوقف عند هذا الحد..</p>
+                                                    <p>نعم، نحن نقدم خدمات مخصصة وفردية حسب نوع الطلب، والغرض منه، حيث أن خدمات الموقع لا تتوقف عند هذا الحد..</p>
                                                     <p>كما أن الموقع يقدم خدمات تحليل النتائج بمقابل مالي.</p>
                                                 </div>
                                             </div>
@@ -356,7 +356,7 @@
                                             </h5>
                                             <div id="question-9" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
                                                 <div class="accordion-body">
-                                                    <p>الموقع يقدم ستة (06) خدمات في الوقت الحالي، كل خدمة تنقسم إلى عدت مخرجات وجداول خاصة نذكر منها:.</p>
+                                                    <p>الموقع يقدم ستة (06) خدمات في الوقت الحالي، كل خدمة تنقسم إلى عدت مخرجات وجداول خاصة نذكر منها:</p>
                                                     <p>- تحليل النتائج قسم بقسم.</p>
                                                     <p>- تحليل النتائج بالمستوى.</p>
                                                     <p>- تحليل النتائج حسب الجنس.</p>
@@ -443,7 +443,7 @@
                                             </h5>
                                             <div id="question-15" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
                                                 <div class="accordion-body">
-                                                    <p>في حالة عد القدرة على فهم أو إستخدام الموقع بالشكل الصحيحة، يمكنكم التواصل معنا وسنقدم جميع الإرشادات الضرورية.</p>
+                                                    <p>في حالة عدم القدرة على فهم أو إستخدام الموقع بالشكل الصحيحة، يمكنكم التواصل معنا وسنقدم جميع الإرشادات الضرورية.</p>
                                                 </div>
                                             </div>
                                         </div>
