--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@
                     <div class="col-lg-6">
                         <div class="about-content" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
                             <p>تحليل نتائج التلاميذ هو عملية تقييم وتفسير البيانات المتعلقة بأداء الطلاب في الاختبارات أو الامتحانات أو أية أنشطة تقييمية أخرى. </p>
-                            <p>تحليل نتائج التلاميذ يعتبر عملية حيوية في تطوير التعليم وتحسين جودته، حيث يوفر رؤى قيمة للمعلمين والمدرسين والإدارات التعليمية لتحسين تجربة التعلم ونجاح الطلاب..</p>
+                            <p>تحليل نتائج التلاميذ يعتبر عملية حيوية في تطوير التعليم وتحسين جودته، حيث يوفر رؤى قيمة للمعلمين والمدرسين والإدارات التعليمية لتحسين تجربة التعلم ونجاح الطلاب.</p>
                             <ul class="features-list">
-                                <li>جمع  وفحص البيانات للتأكد من أنها دقيقة وكاملة</li>
-                                <li>تحليل البيانات لاكتشاف أنماط الأداء والاتجاهات العامة</li>
-                                <li> مقارنة أداء الطلاب مع معايير الأداء المحددة</li>
-                                <li> اتخاذ الإجراءات التصحيحية المناسبة لتحسين أداء الطلاب</li>
+                                <li>جمع  وفحص البيانات للتأكد من أنها دقيقة وكاملة.</li>
+                                <li>تحليل البيانات لاكتشاف أنماط الأداء والاتجاهات العامة.</li>
+                                <li> مقارنة أداء الطلاب مع معايير الأداء المحددة.</li>
+                                <li> اتخاذ الإجراءات التصحيحية المناسبة لتحسين أداء الطلاب.</li>
                             </ul>
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                                     <div class="accordion-item">
                                         <h5 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false">
-                                                كيف يمكنني تحليل النتائج على الموقع?
+                                                كيف يمكنني تحليل النتائج على الموقع؟
                                             </button>
                                         </h5>
                                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
@@ -347,12 +347,12 @@
                                     <div class="accordion-item">
                                         <h5 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false">
-                                                هل بيانات التلاميذ محمية?
+                                                هل بيانات التلاميذ محمية؟
                                             </button>
                                         </h5>
                                         <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
                                             <div class="accordion-body">
-                                                <p>نعم، موقع الوجيز يهتم بخصوصية التلاميذ، حيث أنه لا يحتفظ بأي بيانات ترفع أو تستخرج من الموقع، وتحذف مباشرة بعد الخروج أو تحديث تحديث صفحة الموقع.</p>
+                                                <p>نعم، موقع الوجيز يهتم بخصوصية التلاميذ، حيث أنه لا يحتفظ بأي بيانات ترفع أو تستخرج من الموقع، وتحذف مباشرة بعد الخروج أو تحديث صفحة الموقع.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -520,7 +520,7 @@
                             <div class="inner">
                                 <div class="content text-md-end">
                                     <span class="subtitle">تواصل معنا عبر البريد:</span>
-                                    <h3 class="title"><a href="mailto:alwajeez.contact@gmail.com">alwajeez.contact@</a></h3>
+                                    <h3 class="title"><a href="mailto:haddadi.abdraouf@gmail.com">alwajeez.contact@</a></h3>
                                 </div>
                                 <div class="sparator">
                                     <span>أو</span>
@@ -569,17 +569,17 @@
                                             <img src="assets/images/team/team-01.png" alt="team images">
                                         </a>
                                         <div class="read-more-btn">
-                                            <a class="btn-icon-round" href="#">الفصل الأول</i></a>
+                                            <a class="btn-icon-round" href="Tahlil_T1.html">الفصل الأول</i></a>
                                             <br>
-                                            <a class="btn-icon-round" href="#">الفصل الثاني</i></a>
+                                            <a class="btn-icon-round" href="Tahlil_T2.html">الفصل الثاني</i></a>
                                             <br>
-                                            <a class="btn-icon-round" href="#">الفصل الثالث</i></a>
+                                            <a class="btn-icon-round" href="Tahlil_T3.html">الفصل الثالث</i></a>
                                         </div>
 
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h5 class="title"><a href="team-details.html">تحليل النتائج</a></h5>
+                                    <h5 class="title"><a>تحليل النتائج</a></h5>
                                     <span class="designation">الفصلية</span>
                                 </div>
                             </div>
@@ -596,12 +596,12 @@
                                             <img src="assets/images/team/team-02.png" alt="team images">
                                         </a>
                                         <div class="read-more-btn">
-                                            <a class="btn-icon-round" href="blog-details.html">النتائج السنوية</a>
+                                            <a class="btn-icon-round" href="Tahlil_All.html">النتائج السنوية</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h5 class="title"><a href="team-details.html">تحليل النتائج</a></h5>
+                                    <h5 class="title"><a>تحليل النتائج</a></h5>
                                     <span class="designation">السنوية</span>
                                 </div>
                             </div>
@@ -618,12 +618,12 @@
                                             <img src="assets/images/team/team-03.png" alt="team images">
                                         </a>
                                         <div class="read-more-btn">
-                                            <a class="btn-icon-round" href="blog-details.html">الشهادة</a>
+                                            <a class="btn-icon-round" href="Tahlil_Bem.html">الشهادة</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h5 class="title"><a href="team-details.html">تحليل نتائج</a></h5>
+                                    <h5 class="title"><a>تحليل نتائج</a></h5>
                                     <span class="designation">شهادة التعليم المتوسط</span>
                                 </div>
                             </div>
@@ -640,12 +640,12 @@
                                             <img src="assets/images/team/team-04.png" alt="team images">
                                         </a>
                                         <div class="read-more-btn">
-                                            <a class="btn-icon-round" href="blog-details.html">المكتسبات</a>
+                                            <a class="btn-icon-round" href="Tahlil_5eme.html">المكتسبات</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h5 class="title"><a href="team-details.html">تحليل نتائج</a></h5>
+                                    <h5 class="title"><a>تحليل نتائج</a></h5>
                                     <span class="designation">تقييم المكتسبات</span>
                                 </div>
                             </div>
@@ -667,7 +667,7 @@
                         <div class="col-lg-7">
                             <div class="section-title section-center" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
                                 <h2 class="title">برنامج <span class="color-secondary">الوجيز</span> أجهزة المحمول</h2>
-                                <a href="#" class="edu-btn">رابط التحميال</a>
+                                <a href="#" class="edu-btn">رابط التحميل</a>
                             </div>
                         </div>
                     </div>
