--- a/Tahlil_T1.html
+++ b/Tahlil_T1.html
@@ -468,6 +468,7 @@
                 <a id="titleElement" class="btn-print edu-btn btn-medium switcher-btn">تحليل نتائج الفصل الأول
                     <i class="ri-printer-line" onclick="printSection('Analysesection')"></i>
                     <i class="ri-file-excel-2-line" onclick="xlsxSection('Analysesection')"></i>
+                    <i class="ri-file-excel-2-line" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                 </a>
                     <div class="about-image-gallery">
                         <div class="scroll-container">    
@@ -574,7 +575,7 @@
                                         </tr>
                                 </tbody>
                             </table>
-                        </div> 
+                        </div>
                             
                             <div class="accordion edu-accordion" id="accordionExample" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
                                     <div class="accordion-item">
@@ -591,6 +592,7 @@
                                         </div>
                                     </div>
                             </div>
+                            
                             <ul class="shape-group">
                                 <li class="shape-1 scene" data-sal-delay="500" data-sal="fade" data-sal-duration="200">
                                     <img data-depth="1" src="assets/images/about/shape-36.png" alt="Shape">
