--- a/404.html
+++ b/404.html
@@ -390,7 +390,7 @@
                   </div>
                   <div class="modal-body">
                     <div class="container">
-                        <div class="edu-error">
+                        <div id="certif" class="edu-error">
                             <div id="certificate-content">
 
                             </div>
