--- a/404.html
+++ b/404.html
@@ -389,8 +389,8 @@
                     <h1 class="modal-title fs-4" id="exampleModalFullscreenLabel">عرض الشهادة في وضع ملء الشاشة</h1>
                   </div>
                   <div class="modal-body">
-                    <div class="container">
-                        <div id="certif" class="edu-error">
+                    <div id="certif" class="container">
+                        <div class="edu-error">
                             <div id="certificate-content">
 
                             </div>
