--- a/404.html
+++ b/404.html
@@ -389,7 +389,7 @@
                     <h1 class="modal-title fs-4" id="exampleModalFullscreenLabel">عرض الشهادة في وضع ملء الشاشة</h1>
                   </div>
                   <div class="modal-body">
-                    <div id="certif" class="container">
+                    <div class="container">
                         <div class="edu-error">
                             <div id="certificate-content">
 
