--- a/404.html
+++ b/404.html
@@ -391,7 +391,7 @@
                   <div class="modal-body">
                     <div class="container">
                         <div class="edu-error">
-                            <div id="certificate-content">
+                            <div id="certificate-content" style="font-family: 'Cairo', sans-serif">
 
                             </div>
                         </div>
