--- a/Tahlil_T1.html
+++ b/Tahlil_T1.html
@@ -3473,6 +3473,7 @@
     <script src="assets/js/vendor/plotly.min.js"></script>
     <script src="assets/js/vendor/plotly-locale-ar.js"></script>
     <script src="assets/js/vendor/plotly-locale-ar-dz.js"></script>
+    <script src="assets/js/vendor/apexcharts.min.js"></script>
 
     <!-- Sections-->
     <script src="assets/js/sections.js"></script>
