--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
         <!--=====================================-->
         <!--=       Brand Area Start            =-->
         <!--=====================================-->
+        <div class="container">
+            <div class="ticker">
+                <div class="news">
+                    <marquee class="news-content"style="direction: ltr;">
+                        <p>نصة الوجيز لتحليل نتائج التلاميذ في المتوسطة </p>
+                            <span class="badge">الوجيز</span>
+                        <p>الموقع مجاني ولا يحتاج دفع أي رسوم لإستعماله</p>
+                            <span class="badge">الوجيز</span>
+                        <p>لمنصة الوجيز برنامج على أجهزة الحاسوب سيتم نشره لاحقا على الموقع</p>
+                            <span class="badge">الوجيز</span>
+                        <p>برنامج الوجيز يعمل أيضا على الهاتف، سيتم نشر رابط تحميل التطبيق لاحقا</p>
+                            <span class="badge">الوجيز</span>
+                    </marquee>
+                </div>
+            </div>
+        </div>
         <!-- Start Brand Area  -->
         <div class="edu-brand-area brand-area-6">
             <div class="container">
