--- a/assistant.html
+++ b/assistant.html
@@ -312,9 +312,22 @@
 
     <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
 
-    <script>
-
-    </script>
+<script src="https://giscus.app/client.js"
+        data-repo="Al-Wajeez/Al-Wajeez"
+        data-repo-id="R_kgDOKPVPIQ"
+        data-category="Q&A"
+        data-category-id="DIC_kwDOKPVPIc4CfGSf"
+        data-mapping="specific"
+        data-term="الوجيز"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="ar"
+        crossorigin="anonymous"
+        async>
+</script>
  
 
 
