--- a/Tahlil_T1.html
+++ b/Tahlil_T1.html
@@ -399,7 +399,6 @@
                 <a id="titleElement" class="btn-print edu-btn btn-medium switcher-btn">تحليل نتائج الفصل الأول
                     <i class="ri-printer-line" onclick="printSection('Analysesection')"></i>
                     <i class="ri-file-excel-2-line" onclick="xlsxSection('Analysesection')"></i>
-                    <i class="ri-file-excel-2-line" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                 </a>
                     <div class="about-image-gallery">
                         <div class="scroll-container">    
@@ -3204,8 +3203,7 @@
     <script src="assets/js/vendor/rowReorder.dataTables.js"></script>
     <script src="assets/js/vendor/dataTables.responsive.js"></script>
     <script src="assets/js/vendor/responsive.dataTables.js"></script>
-    <script src="assets/js/vendor/plotly.js"></script>
-    <script src="assets/js/vendor/plotly.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.32.0.min.js" charset="utf-8"></script>
     <script src="assets/js/sections.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
 </body>
