--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="twitter:card" content="نصة الوجيز لتحليل النتائج">
+    <meta property="og:title" content="منصة الوجيز">
+    <meta property="og:description" content="تحليل الأداء الطلابي لرحلة تعليمية ناجحة.">
+    <meta property="og:image" content="assets/images/logo/logo-dark.png">
+    <meta property="og:url" content="https://al-wajeez.vercel.app/">
     <title>الوجيز  (Al-Wajeez) | منصة لتحليل النتائج المدرسية</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
