--- a/index.html
+++ b/index.html
@@ -680,5 +680,9 @@
     <script src="assets/js/vendor/isInViewport.jquery.min.js"></script>
     <script src="assets/js/sections.js"></script>
     <script src="assets/js/app.js"></script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
