--- a/Tahlil_5eme.html
+++ b/Tahlil_5eme.html
@@ -574,5 +574,9 @@
     <script src="assets/js/sections.js"></script>
     <script src="assets/js/vendor/FileSaver.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+        <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
