--- a/Tahlil_T2.html
+++ b/Tahlil_T2.html
@@ -3506,5 +3506,9 @@
     <script src="assets/js/vendor/plotly.min.js"></script>
     <script src="assets/js/sections.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+        <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>s
 </body>
 </html>
