--- a/terms-condition.html
+++ b/terms-condition.html
@@ -299,5 +299,9 @@
     <script src="assets/js/vendor/smooth-scroll.min.js"></script>
     <script src="assets/js/vendor/isInViewport.jquery.min.js"></script>
     <script src="assets/js/app.js"></script>
+        <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
