--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 </head>
 <body>
+
+	<div id="edublink-preloader">
+        <div class="loading-spinner">
+             <div class="loader-square-47"></div>
+        </div>
+    </div>
+	
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
