--- a/coming-soon-blog.html
+++ b/coming-soon-blog.html
@@ -64,6 +64,21 @@
 </head>
 <body>
 <main>
+
+	<div class="preloader">
+		<div class="loader">
+			<div class="loader-outter"></div>
+			<div class="loader-inner"></div>
+	
+			<div class="indicator"> 
+				<svg width="16px" height="12px">
+					<polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+					<polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+				</svg>
+			</div>
+		</div>
+	</div>
+	
 <section class="pt-0 pt-lg-5 position-relative overflow-hidden my-auto">
 	<figure class="position-absolute bottom-0 start-0">
 		<svg width="822.2px" height="301.9px" viewBox="0 0 822.2 301.9">
