--- a/blog-grid.html
+++ b/blog-grid.html
@@ -62,6 +62,21 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 </head>
 <body>
+
+	<div class="preloader">
+		<div class="loader">
+			<div class="loader-outter"></div>
+			<div class="loader-inner"></div>
+	
+			<div class="indicator"> 
+				<svg width="16px" height="12px">
+					<polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+					<polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+				</svg>
+			</div>
+		</div>
+	</div>
+
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
