--- a/index.html
+++ b/index.html
@@ -66,12 +66,20 @@
 </head>
 <body>
 
-	<div id="edublink-preloader">
-        <div class="loading-spinner">
-             <div class="loader-square-47"></div>
-        </div>
-    </div>
+	<div class="preloader">
+		<div class="loader">
+			<div class="loader-outter"></div>
+			<div class="loader-inner"></div>
 	
+			<div class="indicator"> 
+				<svg width="16px" height="12px">
+					<polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+					<polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+				</svg>
+			</div>
+		</div>
+	</div>
+
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
