--- a/coming-soon.html
+++ b/coming-soon.html
@@ -66,17 +66,10 @@
 <main>
 
 	<div class="preloader">
-		<div class="loader">
-			<div class="loader-outter"></div>
-			<div class="loader-inner"></div>
-	
-			<div class="indicator"> 
-				<svg width="16px" height="12px">
-					<polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
-					<polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
-				</svg>
-			</div>
-		</div>
+		<div class="spinner">
+            <div class="double-bounce1"></div>
+            <div class="double-bounce2"></div>
+          </div>
 	</div>
 	
 <section class="pt-0 pt-lg-5 position-relative overflow-hidden my-auto">
