--- a/Ministerial-circular.html
+++ b/Ministerial-circular.html
@@ -3394,5 +3394,7 @@
 <script src="assets/vendor/choices/js/choices.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/js/functions.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
