--- a/Professional-training.html
+++ b/Professional-training.html
@@ -1839,5 +1839,7 @@
 <script src="assets/js/SVTS/iq.js"></script>
 <script src="assets/js/SVTS/fc.js"></script>
 <script src="assets/js/SVTS/opt.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
