--- a/Tahlil-Bem.html
+++ b/Tahlil-Bem.html
@@ -2409,5 +2409,7 @@
 <script src="assets/js/rowReorder.dataTables.js"></script>
 <script src="assets/js/dataTables.responsive.js"></script>
 <script src="assets/js/responsive.dataTables.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
