--- a/index.html
+++ b/index.html
@@ -876,5 +876,7 @@
 <script src="assets/vendor/purecounterjs/dist/purecounter_vanilla.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/js/functions.js"></script>	
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
