--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -616,5 +616,7 @@
 <script src="assets/vendor/tiny-slider/tiny-slider-rtl.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/js/functions.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
