--- a/rate-calculator.html
+++ b/rate-calculator.html
@@ -2906,5 +2906,7 @@
 <script src="assets/js/Calc/moyan.n2.js"></script>
 <script src="assets/js/Calc/moyan.n3.js"></script>
 <script src="assets/js/Calc/moyan.n4.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
