--- a/tasks.html
+++ b/tasks.html
@@ -419,5 +419,7 @@
 <script src="assets/vendor/tiny-slider/tiny-slider-rtl.js"></script>
 <script src="assets/vendor/glightbox/js/glightbox.js"></script>
 <script src="assets/js/functions.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
