--- a/workshop.html
+++ b/workshop.html
@@ -599,5 +599,7 @@
 <script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/tiny-slider/tiny-slider-rtl.js"></script>
 <script src="assets/js/functions.js"></script>
+<script>window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
