--- a/Ministerial-circular.html
+++ b/Ministerial-circular.html
@@ -67,13 +67,6 @@
 </head>
 <body>
 
-    <div class="preloader">
-		<div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-          </div>
-	</div>
-
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
@@ -252,9 +245,9 @@
 				<h1 class="text-white">دليل المناشير الوزارية الخاصة بمحور الإعلام والتقويم والتوجيه</h1>
 				<p class="text-white">دليل المناشير الوزارية الخاصة بمحور الإعلام والتقويم والتوجيه هو مجموعة من الوثائق والمذكرات الرسمية الصادرة عن وزارة التربية الوطنية أو الجهات المعنية في إطار النظام التعليمي. تهدف هذه المناشير إلى توجيه المؤسسات التعليمية ومختلف الفاعلين في القطاع، مثل المستشارين والموجهين، حول كيفية تطبيق السياسات التربوية المتعلقة بمحور الإعلام والتقويم والتوجيه.</p>
 				<ul class="list-inline mb-5">
-					<li class="list-inline-item h6 me-4 mb-1 mb-sm-0 text-white"><span class="fw-light">من طرف</span> قاسي صارة</li>
-					<li class="list-inline-item h6 me-4 mb-1 mb-sm-0 text-white"><span class="fw-light">مستشارة التوجيه والإرشاد المدرسي والمهني</span></li>
-					<li class="list-inline-item h6 mb-0 text-white"><i class="fas fa-globe text-info me-2"></i>الجزائر غرب</li>
+					<li class="list-inline-item h6 me-4 mb-1 mb-sm-0 text-white"><span class="fw-light">من طرف</span> حدادي عبد الرؤوف</li>
+					<li class="list-inline-item h6 me-4 mb-1 mb-sm-0 text-white"><span class="fw-light">الإستشارة والتوجيه والإرشاد المدرسي والمهني</span></li>
+					<li class="list-inline-item h6 mb-0 text-white"><i class="fas fa-globe text-info me-2"></i>الجزائر</li>
 				</ul>
 			</div>
 		</div>
@@ -3318,7 +3311,7 @@
 	<div class="container">
 		<div class="row mx-auto">
 			<div class="col-lg-6 mx-auto text-center my-5">
-				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
