--- a/blog-grid.html
+++ b/blog-grid.html
@@ -63,13 +63,6 @@
 </head>
 <body>
 
-	<div class="preloader">
-		<div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-          </div>
-	</div>
-
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
@@ -467,7 +460,7 @@
 	<div class="container">
 		<div class="row mx-auto">
 			<div class="col-lg-6 mx-auto text-center my-5">
-				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
