--- a/faq.html
+++ b/faq.html
@@ -62,13 +62,6 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 </head>
 <body>
-
-	<div class="preloader">
-		<div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-          </div>
-	</div>
 	
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
@@ -852,7 +845,7 @@
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-twitter" href="#"><i class="fab fa-fw fa-twitter"></i></a> </li>
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-linkedin" href="#"><i class="fab fa-fw fa-linkedin-in"></i></a> </li>
 				</ul>
-				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
