--- a/Moutabaa-T3.html
+++ b/Moutabaa-T3.html
@@ -1614,7 +1614,7 @@
 	<div class="container">
 		<div class="row mx-auto">
 			<div class="col-lg-6 mx-auto text-center my-5">
-				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
