--- a/Professional-training.html
+++ b/Professional-training.html
@@ -64,13 +64,6 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 </head>
 <body>
-
-	<div class="preloader">
-		<div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-          </div>
-	</div>
 	
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
@@ -1826,7 +1819,7 @@
 	<div class="container">
 		<div class="row mx-auto">
 			<div class="col-lg-6 mx-auto text-center my-5">
-				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
