--- a/Structure-of-the-educational-system.html
+++ b/Structure-of-the-educational-system.html
@@ -64,13 +64,6 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 </head>
 <body>
-
-	<div class="preloader">
-		<div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-          </div>
-	</div>
 	
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
@@ -254,8 +247,8 @@
               <img class="avatar-img rounded-circle" src="assets/images/avatar/05.jpg" alt="avatar">
             </div>
             <div class="ms-2">
-              <p class="mb-0 small">مستشارة التوجيه والإرشاد المدرسي والمهني</p>
-              <h5 class="mb-0">قاسي صارة</h5>
+              <p class="mb-0 small">الإمستشارة والتوجيه والإرشاد المدرسي والمهني</p>
+              <h5 class="mb-0">حدادي عبد الرؤوف</h5>
             </div>
           </div>
 				</div>
@@ -365,7 +358,7 @@
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-twitter" href="#"><i class="fab fa-fw fa-twitter"></i></a> </li>
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-linkedin" href="#"><i class="fab fa-fw fa-linkedin-in"></i></a> </li>
 				</ul>
-				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
