--- a/tasks.html
+++ b/tasks.html
@@ -64,13 +64,6 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 </head>
 <body>
-
-	<div class="preloader">
-		<div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-          </div>
-	</div>
 	
 <header class="navbar-light navbar-sticky">
 	<nav class="navbar navbar-expand-lg">
@@ -254,12 +247,12 @@
 								<div class="avatar avatar-xxl">
 									<img class="avatar-img rounded-circle" src="assets/images/avatar/09.jpg" alt="avatar">
 								</div>
-								<a href="#" class="h5 stretched-link mt-2 mb-0 d-block">قاسي صارة</a>
-								<p class="mb-2">مستشار التوجيه والإرشاد المدرسي والمهني</p>
+								<a href="#" class="h5 stretched-link mt-2 mb-0 d-block">حدادي عبد الرؤوف</a>
+								<p class="mb-2">الإمستشار والتوجيه والإرشاد المدرسي والمهني</p>
 							</div>
 							<ul class="list-inline list-unstyled">
-								<li class="list-inline-item d-lg-block my-lg-2">متوسطة</li>
-								<li class="list-inline-item d-lg-block my-lg-2">عين المالحة الجديدة 01</li>
+								<li class="list-inline-item d-lg-block my-lg-2">المتوسطة</li>
+								<li class="list-inline-item d-lg-block my-lg-2">الجزائر</li>
 							</ul>
 						</div>
 					</div>
@@ -408,7 +401,7 @@
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-twitter" href="#"><i class="fab fa-fw fa-twitter"></i></a> </li>
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-linkedin" href="#"><i class="fab fa-fw fa-linkedin-in"></i></a> </li>
 				</ul>
-				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
+				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
 			</div>
 		</div>
 	</div>
