--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 				</div>
 			</div>
 			<div class="col-xl-6 text-center">
-				<h6 class="mb-3 font-base bg-blue text-white py-2 px-4 rounded-2 d-inline-block"><i class="fas fa-school me-2"></i>متوسطة عين المالحة الجديدة 01</h6>
+				<h6 class="mb-3 font-base bg-blue text-white py-2 px-4 rounded-2 d-inline-block"></i>حدادي عبد الرؤوف</h6>
 				<h1>تحليل الأداء الطلابي لمرحلة التعليم المتوسط.</h1>
 				<p class="mb-5">الخيار الأفضل لمستشار التوجيه والإرشاد المدرسي والمهني من حيث التحليل الشامل لنتائج التلاميذ في الطور المتوسط.</p>
 				<div class="d-sm-flex justify-content-center align-items-center mt-5">
