--- a/Tahlil-T3.html
+++ b/Tahlil-T3.html
@@ -162,9 +162,16 @@
 								<a class="dropdown-item" href="coming-soon.html">مطويات</a>
 								<a class="badge bg-success bg-opacity-10 text-success">جديد</a>
 							</li>
-							<li class="d-flex justify-content-between align-items-center">
-								<a class="dropdown-item" href="Structure-of-the-educational-system.html">هيكلـة النظـام التـربوي</a>
-								<a class="badge bg-success bg-opacity-10 text-success">جديد</a>
+							<li class="dropdown-submenu dropend">
+								<a class="dropdown-item dropdown-toggle" href="#">نشرات إعلانية</a>
+								<ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
+									<li> <a class="dropdown-item" href="Flyers/Structure-of-the-educational-system.html">هيكلة النظام التربوي</a></li>
+									<li> <a class="dropdown-item" href="Flyers/Subject-coefficients.html">معاملات المواد</a></li>
+									<li> <a class="dropdown-item" href="Flyers/Professional-training.html">التكوين المهني</a></li>
+									<li> <a class="dropdown-item" href="Flyers/Professional-education.html">التعليم المهني</a></li>
+									<li> <a class="dropdown-item" href="Flyers/Professional-branches.html">الشعب الهنية والشهادات المسلمة</a></li>
+									<li> <a class="dropdown-item" href="Flyers/Formation-in-the-National-Army.html">التكوين في الجيش الوطني الشعبي</a></li>
+								</ul>
 							</li>
 							<li class="dropdown-submenu dropend">
 								<a class="dropdown-item dropdown-toggle" href="#">بطاقات</a>
@@ -262,8 +269,6 @@
 		</div>
 	</nav>
     <hr class="my-0">
-	<hr class="my-0">
-	<hr class="my-0">
 	<nav class="navbar navbar-expand-xl nav-category navbar-area">
 		<div class="container px-0">
 			<button class="navbar-toggler m-auto w-100" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse2" aria-controls="navbarCollapse2" aria-expanded="false" aria-label="Toggle navigation">
